[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-support-env"
version = "1.0.0"
description = "Customer Support Triage — OpenEnv Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.25.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["customer_support_env*"]